--- a/TodayNews/pages/Video/video.wxss
+++ b/TodayNews/pages/Video/video.wxss
@@ -1,9 +1,10 @@
 
 .scrollViewStyle {
+    display: flex;
     flex-direction: column;
     background-color: #e8e8e8;
     width: 100%;
-    height: 100%;
+    height: 1108rpx;
 }
 
 
@@ -11,7 +12,7 @@
     display: flex;
     background-color: white;
     font-size: 30rpx;
-    height: 100%;
+    height: auto;
     margin: 3rpx;
     padding: 20rpx;
     line-height: 120%;
